force-app/main/default/objects/Product_Bundle__c/fields/Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Type__c</fullName>
    <label>Bundle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Packaged Initiative</fullName>
            </value>
            <value>
                <fullName>SMB Packages</fullName>
            </value>
            <value>
                <fullName>Archival Tape Management solution</fullName>
            </value>
            <value>
                <fullName>All Other Product Lines</fullName>
            </value>
            <value>
                <fullName>Total Offsite Records Solution</fullName>
            </value>
            <value>
                <fullName>Restoration Assurance Program (RAP)</fullName>
            </value>
            <value>
                <fullName>IGDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>