force-app/main/default/objects/Product_Bundle__c/fields/Product_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_ID__c</fullName>
    <description>Please put the ID of the product group associated to this bundle.</description>
    <inlineHelpText>Production value for North America Product Group ID: 01s80000000QlcC</inlineHelpText>
    <label>Product Group ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>